syntax = "proto2";

import "lib/common.proto";
import "lib/layout.proto";

message AcornDfsProto
{
    enum Flavour
    {
        UNDEFINED = 0;
        ACORN_DFS = 1;
    }

    optional Flavour flavour = 1
        [ default = ACORN_DFS, (help) = "which flavour of DFS to implement" ];
}

message Brother120FsProto {}

message FatFsProto {}

message CpmFsProto
{
    message Location
    {
        optional uint32 track = 1 [ (help) = "track number" ];
        optional uint32 side = 2 [ (help) = "side number" ];
        optional uint32 sector = 3 [ (help) = "sector ID" ];
    }

    message Padding
    {
        optional uint32 amount = 1
            [ (help) = "number of sectors of padding to insert" ];
        optional uint32 every = 2
            [ (help) = "insert padding after this many sectors" ];
    }

    optional Location filesystem_start = 1
        [ (help) = "position of the start of the filesystem" ];
    optional int32 block_size = 2 [ (help) = "allocation block size" ];
    optional int32 dir_entries = 3
        [ (help) = "number of entries in the directory" ];
    optional Padding padding = 4
        [ (help) = "wasted sectors not considered part of the filesystem" ];
}

message AmigaFfsProto {}

message MacHfsProto {}

message CbmfsProto
{
    optional uint32 directory_track = 1 [
        default = 17,
        (help) = "which track the directory is on (zero-based numbering)"
    ];
}

message ProdosProto {}

// NEXT_TAG: 10
message FilesystemProto
{
    oneof filesystem
    {
        AcornDfsProto acorndfs = 1;
        Brother120FsProto brother120 = 2;
        FatFsProto fatfs = 3;
        CpmFsProto cpmfs = 4;
        AmigaFfsProto amigaffs = 5;
        MacHfsProto machfs = 6;
        CbmfsProto cbmfs = 7;
        ProdosProto prodos = 8;
    }
    
    optional SectorListProto sector_order = 9 [(help) = "specify the filesystem order of sectors"];
}
